src/test/ui/issues/issue-43926.stderr
error: `cfg()` must have an argument
  --> $DIR/issue-43926.rs:1:20
   |
LL | #[link(name="foo", cfg())] //~ ERROR `cfg()` must have an argument
   |                    ^^^^^

error: aborting due to previous error

