src/test/ui/issues/issue-43926.rs
#[link(name = "foo", cfg())] //~ ERROR `cfg()` must have an argument
extern "C" {}

fn main() {}
